fixed alignment issue

--- a/src/components/Button.scss
+++ b/src/components/Button.scss
@@ -1,14 +1,14 @@
-.container {
-    position: absolute;
-    left: 0;
-    top: 30%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-}
+// .container {
+//     position: absolute;
+//     left: 0;
+//     top: 30%;
+//     background: rgba(0, 0, 0, 0.5);
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     height: 100%;
+//     width: 100%;
+// }
 
 .btn-container {
     :hover {
